--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
   <meta name="description" content="Discover Lucky Time Slots! Learn about the app, strategies, free coins, cheats, and reviews. Download now for real casino-style fun!">
   <meta name="google-site-verification" content="GIif95Udz7x9QZyd4UQNJlKkFBqY7t0M8PgVVwPk2sQ" />
   <link rel="stylesheet" href="styles.css">
-  <link rel="canonical" href="">
+  <link rel="canonical" href="https://lucky-time-slots.vercel.app/">
   <link rel="icon" href="Logo.jpg" type="image/png">
- 
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9ZH8NW1Z0T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9ZH8NW1Z0T');
+</script>
 </head>
 <body>
 
